--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.18",
         "axios": "^1.6.7",
+        "laravel-echo": "^1.16.0",
         "laravel-vite-plugin": "^1.0.2",
-        "vite": "^5.0.0"
+        "postcss": "^8.4.35",
+        "pusher-js": "^8.4.0-rc2",
+        "tailwindcss": "^3.4.1",
+        "vite": "^5.1.5"
     },
     "dependencies": {
         "@fullcalendar/core": "^6.1.11",
@@ -19,9 +24,11 @@
         "@vitejs/plugin-vue": "^5.0.4",
         "bootstrap": "^5.3.3",
         "devextreme": "21.2",
+        "path": "^0.12.7",
         "sweetalert2": "^11.10.5",
         "vue": "^3.4.21",
         "vue-router": "^4.3.0",
+        "vue3-toastify": "^0.2.1",
         "whatwg-fetch": "^3.6.20"
     }
 }
