--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "path": "^0.12.7",
         "sweetalert2": "^11.10.5",
         "vue": "^3.4.21",
+        "vue-i18n": "^9.10.1",
         "vue-router": "^4.3.0",
         "vue3-toastify": "^0.2.1",
         "whatwg-fetch": "^3.6.20"
