--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@vitejs/plugin-vue": "^5.0.4",
         "bootstrap": "^5.3.3",
         "devextreme": "21.2",
+        "jquery": "^3.7.1",
         "path": "^0.12.7",
         "sweetalert2": "^11.10.5",
         "vue": "^3.4.21",
